23-Oct-2018  - V0.14 Fix export method for configparser() style configuration files
26-Oct-2018  - V0.15 Improve default configuration format handling
 4-Jan-2019  - V0.16 Add optional arguments to getPath(...,prefixName=None, prefixSectionName=None)
                     Add methods getDefaultSectionName(), replaceSectionName(), and getSectionNameReplacement()
10-Mar-2019  - V0.17 Add getEnvValue() method to dereference an option as an environmental variable
21-Jun-2019  - V0.18 Change development workflow
11-Aug-2019  - V0.19 Add support for configuration secrets
12-Aug-2019  - V0.20 Revise naming API, update documentation and dependencies
13-Aug-2019  - V0.21 Recognize options with leading underscores as secrets.
20-Aug-2019  - V0.22 Add append config method, check for protocol scheme and leading / before preppending path details.
29-Aug-2019  - V0.23 Update dependency to fix py27 issue
30-Aug-2019  - V0.24 Make the default for yaml roundrip False
23-Nov-2019  - V0.25 Update pipeline to py38
14-Dec-2019  - V0.26 Report missing environmental variable lookups as errors.
14-Dec-2019  - V0.27 Improve error reporting for key processing
14-Dec-2019  - V0.28 Further simplify error reporting for missing or bad security key
14-Dec-2019  - V0.29 Quiet troubleshooting output
31-Jan-2020  - V0.30 Add automatic fallback feature for underscore qualified options.
 3-Feb-2020  - V0.31 Add a reserved option to support one level of automatically incorporated configuration.
 3-Feb-2020  - V0.32 Use a generic temporary directory of incorporated configs if cache is not explicitly pathed.
 3-Feb-2020  - V0.33 Change defaults for cache behavior.
13-May-2020  - V0.34 Update dependencies
13-May-2020  - V0.35 Update dependencies
22-Aug-2021  - V0.36 Update install script and fix linting issues
 3-Mar-2022  - V0.37 Clean-up logging messages
 9-Jan-2023  - V0.38 Configuration changes to support tox 4 and testing python 3.9
16-Apr-2024  - V0.39 Update setuptools config